--- a/dating/src/main/resources/messages_fr.properties
+++ b/dating/src/main/resources/messages_fr.properties
@@ -2,6 +2,34 @@ user=utilisateur
 user.email=Adresse mail
 user.lastName=Nom de famille
 user.firstName=Prénom(s)
+user.pseudo=pseudo
+user.sexe=sexe
 user.birthday=Date de Naissance
+user.password=mot de passe
+user.description=description
+user.phone=numéro de téléphone
 site.name=meetiX
+situation.statutPro= situation professionel
+situation.statutPerso= situation personnel
+situation.nbrEnfant= nombre d'enfant
+situation.fumeur= êtes vous fumeur ?
+situation.alcool= votre rapport à l'alcool
 situation.orientation=orientation
+adresse.numero=numero
+adresse.prefixe=prefixe
+adresse.typeRue=type voirie
+adresse.codePostal=code postal
+adresse.nomRue= nom de la rue
+adresse.complement=complement
+centreInteret.sport=sport
+centreInteret.loisir=loisir
+multimedia.typeMultimedia= type de multimedia
+multimedia.genre=genre
+multimedia.titre=titre
+multimedia.artiste=artiste
+apparence.taille=taille
+apparence.couleurYeux=couleur des yeux
+apparence.origine=origine
+apparence.couleurCheveux=couleur des cheveux
+apparence.typeCheveux=type de cheveux
+apparence.masse=corpulence
